Purpple with status bar

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-VITE_VENICE_API_KEY=your_api_key_here
+VITE_VENICE_API_KEY=jP3475iKluxihijsRdMmEoUp3Sv2x4sDqsvIF_4mUb
+And we'll show us the pop-up to buy every 20--
